# meteo

./: DEPLOY_DIGITALOCEAN.md  Dockerfile  README.md  SYSTEM_DESIGN.md  TASK.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build-push.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml
src/meteo_proxy/: __init__.py  config.py  main.py
src/meteo_proxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/meteo_proxy/api/: dependencies.py  routes.py  schemas.py
src/meteo_proxy/middleware/: logging.py
src/meteo_proxy/services/: cache.py  open_meteo.py  weather.py
tests/: conftest.py  test_api.py  test_cache.py  test_open_meteo.py
